// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SanityContent should render exampleMarkDefs blocks 1`] = `
<div>
  <li>
    <strong>Google Analytics</strong>: The Sites use Google Analytics. Further information is available at <a href="https://tools.google.com/dlpage/gaoptout/">https://tools.google.com/dlpage/gaoptout/</a>.
  </li>
</div>
`;

exports[`SanityContent should render heading blocks 1`] = `
<div>
  <h3>3. Providing your personal data to others</h3>
</div>
`;

exports[`SanityContent should render link blocks 1`] = `
<div>
  <a href="http://test.com/"></a>
</div>
`;

exports[`SanityContent should render with no props 1`] = `<div></div>`;

exports[`SanityContent should render with non-standard props 1`] = `<section class="customClass"></section>`;
